templates de validacion e ingreso de ofertas

--- a/public/templates/oferta_verificada.html
+++ b/public/templates/oferta_verificada.html
@@ -12,7 +12,6 @@
     <!-- Inicio barra superior Login -->
 	{% include 'index_login_navbar.html' %}
     <!-- Fin barra superior Login -->
-
 <div class="container">
 	<br>
 	<div class="page-header">
@@ -20,12 +19,12 @@
 	</div>
 
 	<div style="margin: auto; float: none;" class="col-md-6 text-center">
-		<h2>Oferta ingresada <small>Ya Casi!</small></h2>
+		<h2>Oferta Validada <small>Listo! =)</small></h2>
 		<br>
-		<img src="{% static 'img/semi_success.png'%}">
+		<img src="{% static 'img/success.png'%}">
 		<br>
-		<p>Su oferta ha sido ingresada al sistema. Ahora sólo <b>debe verificar la oferta</b>.</p>
-		<p>Un link de verificación ha sido enviado a su correo electronico especficado en el formulario. Al hacer clic en él, la oferta estará disponible en el sistema.</p>
+		<p>Su oferta ha sido ingresada y validada en el sistema, Ya está disponible para que todos los usuarios de la plataforma la vean.</p>
+		<p>Gracias por su publicación</p>
 		<br><br>
 	</div>
 </div>
