--- a/normal_user/templates/template_base_normal_user.html
+++ b/normal_user/templates/template_base_normal_user.html
@@ -15,6 +15,11 @@
 		<link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/sticky-footer-navbar.css' %}">
+		<style>
+			.thumbnail{
+				min-height: 310px;
+			}
+		</style>
         {% block css %}	{% endblock css %}
 
 		<!-- JS -->
