--- a/public/templates/index_login_navbar.html
+++ b/public/templates/index_login_navbar.html
@@ -22,10 +22,10 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> {{user}} <b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li class="dropdown-header">Administrar Cuenta</li>
-								<!--<li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Datos de Perfil</a></li>-->
+								<!--<li class="dropdown-header">Administrar Cuenta</li>
+								<li><a href="#"><span class="glyphicon glyphicon-pencil"></span> Datos de Perfil</a></li>
 								<li><a href="{% url 'user_preferences' %}"><span class="glyphicon glyphicon-cog"></span> Ajustes de Cuenta</a></li>
-								<li class="divider"></li>
+								<li class="divider"></li>-->
 								<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Cerrar Sesion</a></li>
 							</ul>
 						</li>
