cambio el gitignore para no considerar los archivos temporales y modifico sutilmente los templates de valdiacion de registro

--- a/public/templates/usuario_registrado.html
+++ b/public/templates/usuario_registrado.html
@@ -20,7 +20,7 @@
 	</div>
 
 	<div style="margin: auto; float: none;" class="col-md-6 text-center">
-		<h2>Registro Realizado <small>Ya Casi!</small></h2>
+		<h2>Registro de Usuario Realizado <small>Ya Casi!</small></h2>
 		<br>
 		<img src="{% static 'img/semi_success.png'%}">
 		<br>
