--- a/public/templates/usuario_validado.html
+++ b/public/templates/usuario_validado.html
@@ -16,11 +16,11 @@
 <div class="container">
 	<br>
 	<div class="page-header">
-		<h1>Registro de Usuarios <small>Registro Completo</small></h1>
+		<h1>Registro de Usuarios <small>Último Paso</small></h1>
 	</div>
 
 	<div style="margin: auto; float: none;" class="col-md-6 text-center">
-		<h2>Oferta ingresada <small>Listo! =D</small></h2>
+		<h2>Registro de Usuario Realizado <small>Listo! =D</small></h2>
 		<br>
 		<img src="{% static 'img/success.png'%}">
 		<br>
