cambio de templates para ofertas completas

--- a/normal_user/templates/oferta_full.html
+++ b/normal_user/templates/oferta_full.html
@@ -2,6 +2,7 @@
 {% load staticfiles%}
 
 {% block css %}
+<link rel="stylesheet" href="{% static 'css/full_offer.css' %}">
 {% endblock css %}
 
 {% block javascript %}
