--- a/public/templates/confirmation/user.html
+++ b/public/templates/confirmation/user.html
@@ -4,15 +4,18 @@
 <head>
     <title>{% trans 'BolsaTrabajoDCC: Sistema de confirmación de Usuario' %}</title>
 </head>
-<body>
-    <p style="font-weight: bold;">{% trans 'Estimado Usuario:' %}</p>
-    <p>{% trans 'Usted ha solicitado confirmar su membresía a nuestro portal.' %}</p>
-    <p>{% trans 'Para eso ingrese al siguiente link: ' %}</p>
-    <a href="{{ url }}"> {{ url }}</a>
-    <br>
-    <p>{% trans 'Si usted no pidio esta confirmación, por favor sólo ignore este correo.'%}</p>
-    <br>
-    <p>{% trans 'Saludos!' %}</p>
-    <p style="font-weight: bold;">{% trans 'Bolsa de Trabajo - CaDCC 2014' %}</p>
+<body style="background: rgb(235, 235, 235);">
+	<div class="all" style="width: 800px;margin: auto;background: white;padding: 10px 30px;border-bottom: 40px rgb(190, 190, 190) solid;border-bottom-right-radius: 20px;border-bottom-right-radius: 20px;box-shadow: 2px 2px 10px 0px;">
+		<h2>{% trans 'Estimado Usuario:' %}</h2>
+		<p>{% trans 'Usted ha solicitado confirmar su membresía a nuestro portal, para eso ingrese al siguiente link:' %}</p>
+		<p class="link" style="text-align: center;background: rgb(248, 248, 248);height: 60px;width: 90%;margin: auto;border-radius: 28px;font-size: large;">
+			<br>
+			<a href="{{ url }}"> {{ url }}</a>
+			<br>
+		</p>
+		<p>{% trans 'Si usted no pidio esta confirmación, por favor sólo ignore este correo.'%}</p>
+		<p>{% trans 'Saludos!' %}</p>
+		<h4 style="float: right;color: white">{% trans 'Bolsa de Trabajo - CaDCC 2014' %}</h4>
+	</div>
 </body>
 </html>
